# screen-recorder

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  deny.toml  issues.md
.cargo/: config.toml
.github/agents/: speckit.constitution.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/templates/commands/: README.md  analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md  taskstoissues.md
assets/: Info.plist
specs/: 0001-research.md  0002-tech-spec.md  0004-tasks.md  instructions.md  speckit-alignment-audit.md
specs/001-phase-8-audio-conversion/: plan.md  tasks.md
src/: app.rs  error.rs  lib.rs  main.rs
src/capture/: audio.rs  content_filter.rs  engine.rs  mod.rs  permissions.rs
src/config/: mod.rs  settings.rs
src/encode/: mod.rs  pipeline.rs  sync.rs  temp_file.rs
src/output/: mod.rs  save.rs
src/ui/: main_window.rs  mod.rs  preview_panel.rs  save_panel.rs  settings_panel.rs
tests/: audio_pipeline.rs  preview_flow.rs  pts_normalizer.rs  save_roundtrip.rs  settings_roundtrip.rs
